==> NSJ-student/MP3_Player-old-/TouchPanel/TouchPanel.c <==
#include "TouchPanel/TouchPanel.h"
#include "LCD/LCD.h"
#define THRESHOLD 2

void TP_Init(void) 
{ 	
	GPIO_InitTypeDef GPIO_InitStructure; 
	// RCC init
	__HAL_RCC_GPIOB_CLK_ENABLE();		// SCK, MISO, MOSI
	__HAL_RCC_GPIOC_CLK_ENABLE();		// CS
	__HAL_RCC_SPI2_CLK_ENABLE();			// SPI

	GPIO_InitStructure.Pin 			= GPIO_PIN_13 | GPIO_PIN_14 | GPIO_PIN_15 ;	// SCK, MISO, MOSI
	GPIO_InitStructure.Mode 		= GPIO_MODE_AF_PP;		// push-pull alternate
	GPIO_InitStructure.Speed 		= GPIO_SPEED_FREQ_VERY_HIGH;	// 100 MHz
	GPIO_InitStructure.Alternate 	= GPIO_AF5_SPI2;
	GPIO_InitStructure.Pull  		= GPIO_PULLUP;			// pull up
	
	HAL_GPIO_Init(GPIOB, &GPIO_InitStructure);
	
	GPIO_InitStructure.Pin 			= GPIO_PIN_4;		// CS
	GPIO_InitStructure.Mode 		= GPIO_MODE_OUTPUT_PP;	// push-pull output
	
	HAL_GPIO_Init(GPIOC, &GPIO_InitStructure);

	GPIO_InitStructure.Pin 			= GPIO_PIN_5;		// IRQ
	GPIO_InitStructure.Mode 		= GPIO_MODE_INPUT;		// input
	
	HAL_GPIO_Init(GPIOC, &GPIO_InitStructure);
	
  	TP_CS(1); 
  	ADS7843_SPI_Init(); 
}

static void WR_CMD (uint8_t cmd)  
{ 
	uint8_t buff_tx= cmd;
	uint8_t buff_rx;
	/* Wait for SPI2 Tx buffer empty */ 
	//while (SPI_I2S_GetFlagStatus(SPI2, SPI_I2S_FLAG_TXE) == RESET); 
	/* Send SPI2 data */ 
	
	/* Wait for SPI2 data reception */ 
	//while (SPI_I2S_GetFlagStatus(Open_SPI, SPI_I2S_FLAG_RXNE) == RESET); 
	/* Read Open_SPI received data */ 
	
	HAL_SPI_TransmitReceive(&SPI_HandleStruct, &buff_tx, &buff_rx, 1, 100);
	// Timeout : 전송 대기 시간(systick 단위)
}
